<resources>
    <string name="app_name">GM Scan</string>
    <string name="select_document">Select Document</string>
    <string name="id_scan_activity">Scan ID Card</string>
    <string name="details">Details</string>
    <string name="id_card_owner_image_description">ID Card Owner Image</string>
    <string name="empty_text">All Information Available</string>
    <string name="permissions_denied">Permissions denied: </string>
    <string name="text_recognition_failed">Text recognition failed, please try again.</string>
    <string name="camera_stopped">Camera stopped successfully.</string>
    <string name="ocr_text">OCR Text: </string>
    <string name="name_label">Name: </string>
    <string name="full_info">Full Information: </string>
    <string name="phone_label">Mobile Number: </string>
    <string name="email_label">Email: </string>
    <string name="address_label">Address: </string>
    <string name="title_label">Title: </string>
    <string name="ocr_text_hint">OCR-TEXT</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="address_hint">Address</string>
    <string name="phone_hint">Phone</string>
    <string name="fab_description">View OCR Details</string>
    <string name="full_info_label">Full Information:</string>
    <string name="id_scan">ID Scan</string>
    <string name="book_scan">Book Scan</string>
    <string name="document_scan">Document Scan</string>
    <string name="business_scan">Business Scan</string>
    <string name="upload_google_drive">Upload to Google Drive</string>
    <string name="new_feature">New Feature</string>
    <string name="no_history_message">Ready to scan your first one?</string>
    <string name="no_fav_message">Ready to favourite your first one?</string>
    <string name="no_search_message">Search Not Found.</string>
    <string name="favourite">Favourite</string>
    <string name="document_scan_activity">Document Scanning Activity</string>
    <string name="save_as_pdf">Save as PDF</string>
    <string name="add_another_document">Add Another Document</string>
    <string name="rescan">Rescan</string>
    <string name="export">Export</string>
    <string name="document_details">Document Details</string>
    <string name="edit_document">Edit document</string>
    <string name="delete_document">Delete document</string>
    <string name="menu">Menu</string>
    <string name="delete_icon_desc">Delete icon</string>
    <string name="edit_icon_desc">Edit document</string>
    <string name="scan_type_icon_desc">Scan type icon</string>
    <string name="login_with_google">Login With Google</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="default_web_client_id">201507172151-qge3a2dtkcdjbtvhgdhvpi8kn2u1bmtq.apps.googleusercontent.com</string>
    <string name="business_scan_activity">Business Scan Activity</string>
    <string name="tags_label">Tags:</string>
    <string name="profession_label">Profession: </string>
    <string name="companyname_label">Company Name:</string>
    <string name="website_label">Website:</string>
    <string name="bname_label">Name:</string>
    <string name="enter_bname">Enter Name</string>
    <string name="enter_jobtitle">Enter designation</string>
    <string name="enter_companyname">Enter Company Name</string>
    <string name="enter_phone">Enter Mobile Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_website">Enter Website</string>
    <string name="website_hint">Website:</string>
    <string name="enter_address">Enter Address</string>
    <string name="book_scan_label">Book Scan Activity</string>
    <string name="scanned_details">Scanned Details</string>
    <string name="error_no_data">No data available</string>
    <string name="phone_icon">phone icon</string>
    <string name="qr_code">qr code</string>
    <string name="align_card_within_frame">Align card within frame</string>
    <string name="app_logo">App Logo</string>
    <string name="user_profile">User Profile</string>
    <string name="search_icon">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="clear_app_data">Clear App Data</string>
    <string name="clear">Clear</string>
    <string name="app_version">App Version:</string>
    <string name="add_new_field">Add New Field</string>
    <string name="business_card_image">Business card image</string>
    <string name="edit_company_name">Edit</string>
    <string name="edit_name">Edit</string>
    <string name="edit_profession">Edit</string>
    <string name="edit_email">Edit</string>
    <string name="edit_mobile_number">Edit</string>
    <string name="edit_address">Edit</string>
    <string name="edit_tags">Edit</string>
    <string name="search_hint">Search</string>
    <string name="help_center">Help Center</string>
    <string name="business_card_owner_image_description">Business Card Owner Image</string>
    <string name="welcome">Welcome to GM Scan!</string>
    <string name="get_started">GET STARTED</string>
    <string name="splash_app_version">GM Scan Apps v1.0</string>
    <string name="save_as">Save As</string>
    <string name="image">Image</string>
    <string name="pdf">PDF</string>
    <string name="save_as_image">Save as Image</string>
    <string name="signout_message">Are You Sure you want to Sign Out?</string>
    <string name="cancel">Cancel</string>
    <string name="yes_sign_out">Yes, Sign out</string>
    <string name="sign_out">Sign Out</string>
    <string name="export_as">Export As</string>
    <string name="png">PNG</string>
    <string name="password_reset_successfully">Password Reset Successful!</string>
    <string name="your_password_reset_successfully">Your password has been reset successfully</string>
    <string name="search_fav">search your favorite</string>
    <string name="search_histroy">search your scanned history</string>
    <string name="delete_message">Are You Sure you want to Delete?</string>
    <string name="yes_delete">Yes, Delete</string>
    <string name="BookScannerActivity">Book Scan Activity</string>
    <string name="Permissions_Required">Permissions Required</string>
    <string name="no_subject">No subjects available</string>
    <string name="camera_storage_permission">This app needs camera and storage permissions to scan books and access gallery images</string>
    <string name="camera_initialization">Camera initialization failed</string>
    <string name="Barcode_scan">Barcode scanning failed</string>
    <string name="text_recognition">Text recognition failed</string>
    <string name="Book_name">Book Name</string>
    <string name="Author_name">Author Name</string>
    <string name="Publish_year">Publish Year</string>
    <string name="number_of_pages">Number of Pages</string>
    <string name="Subject">Subject</string>
    <string name="no_books">No books found</string>
    <string name="failed_to_search_book">Failed to search book</string>
    <string name="pages">pages</string>
    <string name="books_details_card">Book Details</string>
    <string name="edit_book">Edit Book</string>
    <string name="delete_book">Delete Book</string>
    <string name="save_book">Save Book</string>
    <string name="book_details">Book Details</string>
    <string name="book_cover">Book cover</string>
    <string name="book_cover_preview">Book Cover Preview</string>
    <string name="published">published</string>
    <string name="isbn_label">ISBN No:</string>
    <string name="enter_isbn">Enter ISBN No</string>
    <string name="edit_isbn">Edit</string>
    <string name="bookname_label">Book Name:</string>
    <string name="enter_bookname">Enter Book Name</string>
    <string name="edit_bookname">Edit</string>
    <string name="author_label">Author:</string>
    <string name="enter_author">Enter Author Name</string>
    <string name="edit_author">Edit</string>
    <string name="publish_label">Publish on:</string>
    <string name="enter_publish_year">Enter publish year</string>
    <string name="edit_publish">Edit</string>
    <string name="numberofpage_label">Number Of Pages:</string>
    <string name="enter_pages">Enter Pages</string>
    <string name="edit_pages">Edit</string>
    <string name="subject_label">Subject:</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="edit_subject">Edit</string>
    <string name="close">close</string>
    <string name="profile">Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_gmscan">About GM Scan</string>
    <string name="gaby">Gaby</string>
    <string name="helen">Helen</string>
    <string name="gaby_helen">Gaby Helen</string>
    <string name="email_id">E-mail ID</string>
    <string name="gaby_mail">gaby@domain.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="ml_kit_activity">ML Kit Activity</string>
    <string name="not_available">Not Available</string>
    <string name="business_detail_label">Business Detail Activity</string>
    <string name="document_created_successfully">Document created successfully</string>
    <string name="error_creating_document">Error creating document</string>
    <string name="api_call_failed">API call failed</string>
    <string name="document_retrieved_successfully">Document retrieved successfully</string>
    <string name="error_empty_document">Error empty document</string>
    <string name="error_retrieving_document">error retrieving document</string>
    <string name="error_processing_image">error processing image</string>
    <string-array name="id_types">
        <item>Select ID Type</item>
        <item>ID Card</item>
        <item>National ID</item>
        <item>Passport</item>
        <item>Driver\'s License</item>
    </string-array>
    <string name="continue_by">By continuing to use the app? you read our \nTerms of use and Privacy Policy</string>
    <string name="back">Back</string>
    <string name="send_code">Send Code</string>
    <string name="email_address">Email address</string>
    <string name="enter_you_email_address_we_will_send_an_otp_code_for_verification">Enter you email address. we will send an OTP code for verification</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="application_logo">Application Logo</string>
    <string name="back_button">Back button</string>
    <string name="version">Version 1.0 - Feb 24, 2025</string>
    <string name="about_app">About App</string>
    <string name="Rating">Rating</string>
    <string name="Share">Share</string>
    <string name="GMScan_logo">GMScan Logo</string>
    <string name="GMScan">GMScan</string>
    <string name="about">About</string>
    <string name="about_app_description">GMScan App is a document scanning application designed for efficient and accurate scanning of IDs, documents, and books. It allows users to capture, process, and store scanned files with ease. The app includes features like automatic edge detection, high-quality image processing, and seamless integration for digital documentation.</string>
    <string name="Save_image">Save Original image to gallery</string>
    <string name="high_quality_scan">High Quality Scan</string>
    <string name="Auto_crop_image">Auto Crop Image</string>
    <string name="Files_and_storage">Files and Storage</string>
    <string name="settings_title">Settings</string>
    <string name="scan_section_title">Scan</string>
    <string name="navigate_back">Navigate back</string>
    <string name="high_quality_scan_switch_desc">Toggle high quality scan mode</string>
    <string name="auto_crop_switch_desc">Toggle automatic image cropping</string>
    <string name="save_image_switch_desc">Toggle saving original images</string>
</resources>