<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/includeAppBar"
        layout="@layout/layout_details_appbar"/>

    <ScrollView
        android:layout_below="@+id/includeAppBar"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent"
        android:padding="@dimen/scrollview_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- OCR Text -->
            <TextView
                android:background="@drawable/rounded_edittext"
                android:id="@+id/fullTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edittext_padding"
                android:hint="@string/ocr_text_hint"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/card_color"
                android:textColorHint="@color/card_color"
                android:textSize="@dimen/text_size" />

            <!-- Name -->
            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edittext_padding"
                android:hint="@string/name_hint"
                android:textColor="@color/card_color"
                android:textColorHint="@color/card_color"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:background="@drawable/rounded_edittext" />

            <!-- Email -->
            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edittext_padding"
                android:hint="@string/email_hint"
                android:textColor="@color/card_color"
                android:textColorHint="@color/card_color"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:background="@drawable/rounded_edittext" />

            <!-- Address -->
            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/card_color"
                android:textColorHint="@color/card_color"
                android:padding="@dimen/edittext_padding"
                android:hint="@string/address_hint"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:background="@drawable/rounded_edittext" />

            <!-- Phone -->
            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/card_color"
                android:textColorHint="@color/card_color"
                android:padding="@dimen/edittext_padding"
                android:hint="@string/phone_hint"
                android:textSize="@dimen/text_size"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:background="@drawable/rounded_edittext" />
        </LinearLayout>

    </ScrollView>

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_view"
        app:fabSize="normal"
        android:visibility="gone"
        app:backgroundTint="@color/purple_700"
        app:tint="@color/white"
        android:contentDescription="@string/fab_description"/>
</RelativeLayout>
